Fix styling on button for homepage which was making it misaligned

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1582,9 +1582,6 @@ section.organizations {
 		button {
 			width: 222px;
 			display: inline-block;
-			&:first-of-type {
-				margin-right: 33px;
-			}
 		}
 	}
 	section.how-it-works {
